--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -1342,7 +1342,7 @@
 
       function initSimpleConnection() {
 			try {
-				var simpleConn = new SimpleConnection(${host});
+				var simpleConn = new SimpleConnection();
 				simpleConn.clazzWsListener = {
 					onError : function(errorMsg) {
 					},
