--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -50,7 +50,7 @@
    }];
    getClassOpenedKejian(vid);
    filterCloudFile();
-//   simpleMS.connect();
+   simpleMS.connect();
    //监听
 //   simpleMS.msgWsListener = {
 //        onError: function (errorMsg) {
