--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1754,7 +1754,7 @@ video{
                         var roomid = info.data.roomid;
                         var uid = info.data.userId;
                         var html = info.data.html;
-                        if (roomid == vid && userId == uid) {
+                        if (roomid == vid) {
                             playPPT(html, true);
                         }
                     }
