--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1633,7 +1633,7 @@ video{
   };
 
   function showOnlineUsers(vid){
-	  $("#zaixian_iframe").attr("src","Excoord_PhoneService/elearning/getVclassMember/"+vid);
+	  $("#zaixian_iframe").attr("src","https://www.maaee.com/Excoord_PhoneService/elearning/getVclassMember/"+vid);
   }
 
   function showEclassCurrentBigStreamId(){
