--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -466,6 +466,7 @@
   loginProtocol.data = {};
   loginProtocol.data.userId = userId;
   loginProtocol.data.vid = vid;
+  loginProtocol.data.userName = userName;
   loginProtocol.data.clazzIds = clazzIds;
   connection.connect(loginProtocol);
 
