--- a/public/schoolClass/abazhouClass/abazhouUnionClassList.html
+++ b/public/schoolClass/abazhouClass/abazhouUnionClassList.html
@@ -296,7 +296,7 @@
     }
 
     function goReview(vid){
-        var html = "http://jiaoxue.maaee.com:8093/#/cloundSchoolDetail?vId="+vid+"&userId="+teacherId+"&type=2&name=test&userAgent=android";
+        var html = "cloundSchoolDetail?vId="+vid+"&userId="+teacherId+"&type=2&name=test&userAgent=android";
         layer.open({
             type: 2,
             title: '课程回顾',
